# ramp-core

./: .gitignore  CODE_OF_CONDUCT.md  README.md  pyproject.toml  requirements.yml  setup.py  tests_requirements.yml
.github/workflows/: test.yml
ramp_core/: __init__.py  json.py  serializable.py  tempdir.py
tests/: test_prefer_list.py
